# underwrite

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  FEATURES_IMPROVEMENTS_OPTIMIZATIONS.md  FIDELITY_REPORT.md  GAP_ANALYSIS.md  LICENSE  Makefile  PRODUCTION_READINESS.md  README.md  REVIEW.md  REVIEW_HIDDEN_FAILURES.md  RUNBOOK.md  TODO.md  cleanup.sh  demo.py  docker-compose.yml  format.sh  lint.sh  locustfile.py  mkdocs.yml  otel-collector.yml  pyproject.toml  requirements-lock.txt  setup.sh  test.sh  tox.ini
.github/workflows/: ci.yml  docker.yml
docs/: API.md  BUILD.md  CHANGELOG_GUIDE.md  CODE_STYLE.md  CONFIGURATION.md  CONTRIBUTING.md  DATABASE.md  DEBUGGING.md  DEPENDENCIES.md  DEPLOYMENT.md  DESIGN_DECISIONS.md  DEVELOPMENT.md  DIRECTORY_STRUCTURE.md  DOCKER.md  DOMAIN_MODEL.md  ENVIRONMENT_VARIABLES.md  FAQ.md  GLOSSARY.md  INSTALLATION.md  KYC_INTEGRATIONS.md  MAINTENANCE.md  MIGRATIONS.md  OBSERVABILITY.md  OPERATIONS.md  PERFORMANCE.md  QUICKSTART.md  README.md  RELEASE_PROCESS.md  ROADMAP.md  SECURITY.md  SYSTEM_DESIGN.md  TESTING.md  TROUBLESHOOTING.md  architecture.md  default.md  extensions.md  pricing.md  revocation.md  running.md  setup.md  (+1 more)
docs/ADR/: 001-nano-service-architecture.md  002-event-driven-communication.md  003-ed25519-cryptographic-provenance.md  004-saga-orchestration.md  README.md
k8s/: alerting-rules.yaml  bluegreen-deployment.yaml  bluegreen-service.yaml
scripts/: build-image.sh  bump_version.py  generate_sdk.py
tests/: conftest.py  test_amortization.py  test_audit.py  test_audit_and_api.py  test_authz.py  test_bus_extras.py  test_calendar_india.py  test_circuit.py  test_collateral.py  test_collection.py  test_communication.py  test_compliance.py  test_concurrency.py  test_concurrency_faults.py  test_configuration.py  test_consent.py  test_credit_bureau.py  test_decision.py  test_dsr.py  test_error_paths.py  test_fee.py  test_framework.py  test_fraud.py  test_graph.py  test_identity.py  test_identity_extras.py  test_indian_format.py  test_integration.py  test_kfs.py  test_kyc_providers.py  test_logging_redaction.py  test_mechanism.py  test_metrics_export.py  test_migrate.py  test_new_features.py  test_new_services.py  test_notification.py  test_npa.py  test_origination.py  test_payment.py  (+23 more)
tests/chaos/: test_db_failure.py
tests/contract/: test_api_contract.py
tests/e2e/: test_loan_lifecycle.py
tests/integration/: test_batch_inserts.py  test_migrations.py  test_repositories.py
tests/property/: test_mechanism_properties.py
tests/security/: test_sql_injection_audit.py
tests/unit/: test_agents.py  test_alternate_scoring.py  test_aml_audit.py  test_anchoring.py  test_anti_fraud.py  test_api_keys.py  test_audit_signatures.py  test_auto_debit.py  test_bankruptcy.py  test_blockchain.py  test_bridge.py  test_bulk.py  test_bump_version.py  test_collateral.py  test_complaints.py  test_compliance.py  test_concentration.py  test_db_tracing.py  test_dlg_workflow.py  test_dynamic_pricing.py  test_execution.py  test_generate_sdk.py  test_governance.py  test_kyc_aml.py  test_liquidation.py  test_log_shipper.py  test_materialized_views.py  test_multisig.py  test_notices.py  test_npa.py  test_penalties.py  test_proposals.py  test_query_cache.py  test_rbi_dlg.py  test_redis_cache.py  test_response_cache.py  test_restructure.py  test_risk.py  test_risk_integrations.py  test_schedules.py  (+9 more)
ulu/: __init__.py  errors.py  risk_model.py
ulu/anti_fraud/: auctions.py  graph_analysis.py  transaction_monitor.py  velocity.py
ulu/api/: api_keys.py  app.py  cache.py  deps.py  middleware.py  schemas.py  service.py  session_manager.py  versioning.py  webhooks.py
ulu/audit/: __init__.py  ledger.py
ulu/blockchain/: anchoring.py  bridge.py  client.py  multisig.py  tokenization.py
ulu/collateral/: escrow.py  liquidation.py  ratios.py
ulu/compliance/: audit_signatures.py  bankruptcy.py  complaints.py  kyc_aml.py  rbi_dlg.py  reporting.py
ulu/core/: dynamic_pricing.py  invariants.py  mechanism.py  pricing.py  serialization.py
ulu/domain/: collateral.py  events.py  loans.py  users.py
ulu/governance/: execution.py  oracles.py  parameters.py  proposals.py  voting.py
ulu/infra/: circuit_breaker.py  config.py  db.py  db_tracing.py  log_shipper.py  logging.py  materialized_views.py  models.py  query_cache.py  redis_cache.py  repositories.py  (+4 more)
underwrite/: __amortization__.py  __async_bus__.py  __authz__.py  __bus__.py  __bus_modal__.py  __bus_sqs__.py  __calendar_india__.py  __circuit__.py  __cli__.py  __config__.py  __events__.py  __exceptions__.py  __health__.py  __identity__.py  __indian_format__.py  __init__.py  __logger__.py  __metrics__.py  __migrate__.py  __pii.py  __plugins__.py  __runtime__.py  __saga__.py  __schema__.py  __secrets__.py  __serve__.py  __service_registry__.py  __store__.py  __supervisor__.py  __tracer__.py  _service_registry.py  prometheus_export.py  validate.py  version.py
(+91 files in other folders)
