[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "underwrite"
dynamic = ["version"]
description = "Delegated Underwriting Protocol — nano-service platform for unsecured lending"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "underwriting",
    "lending",
    "nano-services",
    "event-driven",
    "delegated-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=41.0",
    "typer>=0.12",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "testcontainers>=4.0",
    "httpx>=0.27",
]
security = [
    "bandit>=1.7",
    "pip-audit>=2.7",
]
gcs = [
    "google-cloud-storage>=2.10",
]
otlp = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]
risk = [
    "numpy>=1.26",
    "scikit-learn>=1.5",
]
mutation = [
    "mutmut>=3.0",
]
postgres = [
    "psycopg2-binary>=2.9",
]
serve = ["uvicorn[standard]>=0.24", "fastapi>=0.104"]
vault = ["hvac>=2.0"]
notify = ["twilio>=8.0"]
aws = ["boto3>=1.33"]
modal = ["modal>=0.60"]
all = [
    "underwrite[postgres]",
    "underwrite[otlp]",
    "underwrite[serve]",
    "underwrite[vault]",
    "underwrite[aws]",
    "underwrite[gcs]",
    "underwrite[modal]",
]

[project.urls]
Homepage = "https://github.com/sachn-cs/unsecured-lending-underwriting"
Repository = "https://github.com/sachn-cs/unsecured-lending-underwriting"
Issues = "https://github.com/sachn-cs/unsecured-lending-underwriting/issues"

[project.scripts]
underwrite = "underwrite.__cli__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
python_files = ["test_*.py"]

[tool.mutmut]
paths = ["underwrite"]
backup = false
runner = "python -m pytest tests/ -x --timeout=30"
tests_dir = "tests"
dict_sync = false
exclude_lines = [
    'from __future__',
    'logger\\.(exception|warning|info|debug)',
    'raise (NotImplementedError|ProtocolError|InfeasibleOperationError)',
    'if TYPE_CHECKING',
]


[tool.setuptools.packages.find]
include = ["underwrite*"]

[tool.setuptools_scm]
write_to = "underwrite/__version__.py"

[tool.setuptools.package-data]
underwrite = ["py.typed"]

[tool.ruff]
line-length = 120
exclude = ["underwrite/__version__.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".tox"]
skips = ["B101"]  # allow assert statements in non-test code

[tool.mypy]
ignore_missing_imports = true
